--- a/static/templates/meta.html
+++ b/static/templates/meta.html
@@ -27,14 +27,23 @@
 	{% block header %}{% endblock header %}
 </header>
 
-<div id="main-container" class="container main-container" >
-	{% block messages %}{% if messages %}<div class="col-sm-12">{% include "messages.html" %}</div>{% endif %}{% endblock messages %}
-	{% block content %}{% endblock content %}
+<div class="container-fluid">
+	<div class="row">
+		{% block sidebar %}
+			<!-- Sidebar -->
+		{% endblock sidebar %}
+		<main class="col-sm-9 offset-sm-3 col-md-10 offset-md-2 pt-3">
+			{% block messages %}
+				{% include "messages.html" %}
+			{% endblock messages %}
+			{% block content %}
+				<!-- Content -->
+			{% endblock content %}
+		</main>
+	</div>
 </div>
 
-<footer class="endpage">
-	{% block footer %}{% endblock footer %}
-</footer>	
+	
 
 	
 {% block scripts %}
