--- a/sites/templates/sites/module-template.html
+++ b/sites/templates/sites/module-template.html
@@ -7,7 +7,7 @@
 {% block content %}{{ block.super }}
 
 <h1>{{ object.name }}</h1>
-<p>Module</p>
+<p>Module Template</p>
 
 {% endblock content %}
 
