--- a/static/templates/dashboard/css.html
+++ b/static/templates/dashboard/css.html
@@ -34,7 +34,7 @@ h1 {
 	padding: 20px;
 	overflow-x: hidden;
 	overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-	border-right: 1px solid #eee;
+	border-right: 1px solid #ddd;
 }
 
 /* Sidebar navigation */
