added preview and dashboard list

--- a/sites/templates/sites/overview.html
+++ b/sites/templates/sites/overview.html
@@ -2,33 +2,46 @@
 {% load staticfiles %}
 {% load bootstrap4 %}
 
-
+{% block head %}{{ block.super }}
+	<style>
+		.site { max-width: 20rem; }
+		.nav-link > .fa { margin-right: .25em; }
+	</style>
+{% endblock head %}
 
 {% block content %}
 
 	<h1>Vue d'ensemble</h1>
 
-	{{ ifuser.sites_that_can_be_edited.all }}
-
-
-
 	{% if user.sites_that_can_be_edited.all %}
 		{% for site in user.sites_that_can_be_edited.all %}
-			{{ site.name }}
-			{{ site.description }}
-			{{ site.editors }}
+			<div class="card site">
+				<div class="card-body">
+					<h4 class="card-title">
+						{{ site.name }}
+					</h4>
+					<p class="card-text">
+						{{ site.description }}
+					</p>
+					<p class="card-text text-muted">
+						{% for editor in site.editors.all %}<span>{{ editor }}</span>{% endfor %}
+					</p>
+					<a href="{% url 'sites__site_preview' site.key %}" class="btn btn-primary">
+						Pré-visualiser
+					</a>
+				</div>
+			</div>
 		{% endfor %}
 	{% else %}
 		<p>Vous n'avez pas encore de site !</p>
 		<p><a class="btn btn-primary" href="{% url 'sites__site_create' %}">Créer un site</a></p>
 	{% endif %}
 
-	{% include 'dashboard/core.html' %}
-
 {% endblock content %}
 
 
 
-{% block scripts %} {{ block.super }}
+{% block scripts %}{{ block.super }}
+
 
 {% endblock scripts %}
