--- a/static/templates/dashboard/sidebar.html
+++ b/static/templates/dashboard/sidebar.html
@@ -1,43 +1,21 @@
 <ul class="nav nav-pills flex-column">
 	<li class="nav-item">
-		<a class="nav-link active" href="#">Vue d'ensemble <span class="sr-only">(current)</span></a>
+		<a class="nav-link active" href="#">
+			<i class="fa fa-tachometer"></i> Vue d'ensemble
+		</a>
+	</li>
+	<li>
+		<a class="nav-link" href="{% url 'sites__site_create' %}">
+			<i class="fa fa-plus"></i> Créer un site
+		</a>
 	</li>
 	{% if user.is_staff %}
 	<li class="nav-item">
-		<a class="nav-link" href="#"><i class="fa fa-wrench"></i> Administration</a>
+		<a class="nav-link" href="{% url 'admin:index' %}">
+			<i class="fa fa-wrench"></i> Administration
+		</a>
 	</li>
 	{% endif %}
-	<li class="nav-item">
-		<a class="nav-link" href="#">Analytics</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Export</a>
-	</li>
-</ul>
-<ul class="nav nav-pills flex-column">
-	<li class="nav-item">
-		<a class="nav-link" href="#">Nav item</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Nav item again</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">One more nav</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Another nav item</a>
-	</li>
-</ul>
-<ul class="nav nav-pills flex-column">
-	<li class="nav-item">
-		<a class="nav-link" href="#">Nav item again</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">One more nav</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link" href="#">Another nav item</a>
-	</li>
 </ul>
 <hr/>
 <footer class="small text-muted" style="padding: .5rem 1rem">
