--- a/static/templates/dashboard/css.html
+++ b/static/templates/dashboard/css.html
@@ -6,19 +6,17 @@
  * Base structure
  */
 
-/* Move down content because we have a fixed navbar that is 50px tall */
+/* Move down content because we have a fixed navbar */
+
 body {
-	padding-top: 50px;
+	padding-top: 3.5rem;
 }
 
-/*
- * Typography
- */
+h1, h2, h3, h4, h5, h6 { margin-bottom: 1rem; }
 
-h1 {
-	margin-bottom: 20px;
-	padding-bottom: 9px;
+header {
 	border-bottom: 1px solid #eee;
+	margin-bottom: 1rem;
 }
 
 /*
