--- a/static/templates/form.html
+++ b/static/templates/form.html
@@ -5,40 +5,52 @@
 
 {% block content %}{{ block.super }}
 
-	{% if view.form_title %}<h2>{{ view.form_title }}</h2>{% endif%}
+	<div class="card mt-3">
+		<div class="card-header">
+			{% if view.form_title %}<h2>{{ view.form_title }}</h2>{% endif %}
+		</div>
+		<div class="card-body">
+			<form class="form-horizontal" method="post" action="#">
 
-	<form class="form-horizontal" method="post" action="#">
+				{% csrf_token %}			
 
-		{% csrf_token %}			
+				{% comment %} Standard form based on model fields {% endcomment %}
+				{% bootstrap_form form %}
 
-		{% comment %} Standard form based on model fields {% endcomment %}
-		{% bootstrap_form form %}
+				{% comment %} Customiseable additional elements {% endcomment %}
+				{% block additional_form_elements %}{% endblock additional_form_elements %}
 
-		{% comment %} Customiseable additional elements {% endcomment %}
-		{% block additional_form_elements %}{% endblock additional_form_elements %}
+				{% comment %} Customiseable submit button {% endcomment %}
+				<button class="btn btn-block btn-primary">
+					<span>
+						{% if view.form_submit_button_icon %}
+							<i class="fa fa-{{ view.form_submit_button_icon }}"></i>
+						{% else %}
+							<i class="fa fa-check"></i>
+						{% endif %}
+					</span>
+					<span>
+						{% if view.form_submit_button_label %}
+							{{ view.form_submit_button_label }}
+						{% else %}
+							Valider
+						{% endif %}
+					</span>
+				</button>
 
-		{% comment %} Customiseable submit button {% endcomment %}
-		<button class="btn btn-block btn-primary">
-			<span>
-				{% if view.form_submit_button_icon %}
-					<i class="fa fa-{{ view.form_submit_button_icon }}"></i>
-				{% else %}
-					<i class="fa fa-check"></i>
-				{% endif %}
-			</span>
-			<span>
-				{% if view.form_submit_button_label %}
-					{{ view.form_submit_button_label }}
-				{% else %}
-					Valider
-				{% endif %}
-			</span>
-		</button>
-
-	</form>
+			</form>
+		</div>
+	</div>
 
 	{% comment %} Customiseable additional elements {% endcomment %}
 	{% block after_the_form %}{% endblock after_the_form %}
 
-
 {% endblock content %}
+
+
+
+{% block scripts %} {{ block.super }}
+
+	{{ form.media }}
+
+{% endblock scripts %}
