--- a/static/templates/dashboard/base.html
+++ b/static/templates/dashboard/base.html
@@ -8,27 +8,30 @@
 
 {% block body %}
 
-	<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-		<a class="navbar-brand" href="/">
-			<img src="{%  static 'white.png' %}" style="height: 1.4rem; position: relative; top: -.1rem;"/> Digidem
-		</a>
-	</nav>
+	{% include 'dashboard/nav.html' %}
 
 	<div class="container-fluid">
 
 		<div class="row">
 
-			<nav class="col-sm-3 col-md-2 d-none d-sm-block sidebar">
+			<nav class="col-sm-4 d-sm-block col-md-3 col-lg-2 d-none sidebar">
 				{% block sidebar %}
 					{% include 'dashboard/sidebar.html' %}
 				{% endblock sidebar %}
 			</nav>
 		
-			<main class="col-sm-9 ml-sm-auto col-md-10 pt-3" role="main">
+			<main class="col-sm-8 ml-sm-auto col-md-9 col-lg-10 pt-3" role="main">
 	
 				{% block messages %}
 					{% include "messages.html" %}
 				{% endblock messages %}
+
+				{% if view.title %}
+					<header>
+						<h1>{{ view.title }}</h1>
+						{% if view.description %}<p class="page-description">{{ view.description }}</p>{% endif %}
+					</header>
+				{% endif %}
 	
 				{% block content %}
 					<!-- Main content displayed here -->
@@ -41,11 +44,3 @@
 	</div>
 
 {% endblock body %}
-
-{% block scripts %} {{ block.super }}
-
-	<style>
-		h1, h2, h3, h4, h5, h6 { margin-bottom: 1rem; }
-	</style>
-
-{% endblock scripts %}
