--- a/static/templates/dashboard/sidebar.html
+++ b/static/templates/dashboard/sidebar.html
@@ -1,18 +1,18 @@
 <ul class="nav nav-pills flex-column">
 	<li class="nav-item">
 		<a class="nav-link active" href="#">
-			<i class="fa fa-tachometer"></i> Vue d'ensemble
+			<i class="fa fa-tachometer"></i> &nbsp;Vue d'ensemble
 		</a>
 	</li>
 	<li>
 		<a class="nav-link" href="{% url 'sites__site_create' %}">
-			<i class="fa fa-plus"></i> Créer un site
+			<i class="fa fa-plus"></i> &nbsp;Créer un site
 		</a>
 	</li>
 	{% if user.is_staff %}
 	<li class="nav-item">
 		<a class="nav-link" href="{% url 'admin:index' %}">
-			<i class="fa fa-wrench"></i> Administration
+			<i class="fa fa-wrench"></i> &nbsp;Administration
 		</a>
 	</li>
 	{% endif %}
