--- a/sites/templates/sites/module_field.html
+++ b/sites/templates/sites/module_field.html
@@ -1,27 +1,48 @@
 <div class="form-group">
 	<label>{{ field.name }}</label>
 
-	{% for key, value in module.get_values.items %}
+	{% if module.get_values.items %}
 
-		{% if field.slug == key %}
+		{% for key, value in module.get_values.items %}
 
-			{% if field.type == "text_short" %}
-				<input name="{{field.slug}}" value="{{value}}" class="form-control" maxlength="160" required>
+			{% if field.slug == key %}
 
-			{% elif field.type == "text_markdown" %}
-				<textarea name="{{field.slug}}" class="form-control" maxlength="5000" rows="12" required>{{value}}</textarea>
+				{% if field.type == "text_short" %}
+					<input name="{{field.slug}}" value="{{value}}" class="form-control" maxlength="160" required>
 
-			{% elif field.type == "email" %}
-				<input name="{{field.slug}}" value="{{value}}" class="form-control" maxlength="160" required>
+				{% elif field.type == "text_markdown" %}
+					<textarea name="{{field.slug}}" class="form-control" maxlength="5000" rows="12" required>{{value}}</textarea>
 
-			{% else %}
-				Erreur dans le template de ce module : le champ de type "{{ field.type }}" n'existe pas.
+				{% elif field.type == "email" %}
+					<input type="email" name="{{field.slug}}" value="{{value}}" class="form-control" maxlength="160" required>
+
+				{% else %}
+					Erreur dans le template de ce module : le champ de type "{{ field.type }}" n'existe pas.
+
+				{% endif %}
 
 			{% endif %}
 
+		{% endfor %}
+
+	{% else %}
+
+		{% if field.type == "text_short" %}
+			<input name="{{field.slug}}" value="{{field.default}}" class="form-control" maxlength="160" required>
+
+		{% elif field.type == "text_markdown" %}
+			<textarea name="{{field.slug}}" value="{{field.default}}" class="form-control" maxlength="5000" rows="12" required>{{value}}</textarea>
+
+		{% elif field.type == "email" %}
+			<input type="email" name="{{field.slug}}" value="{{field.default}}" class="form-control" maxlength="160" required>
+
+		{% else %}
+			Erreur dans le template de ce module : le champ de type "{{ field.type }}" n'existe pas.
+
 		{% endif %}
 
-	{% endfor %}
+
+	{% endif %}
 
 
 	{% if field.help_text %}
