--- a/sites/templates/sites/site_update.html
+++ b/sites/templates/sites/site_update.html
@@ -1,6 +1,17 @@
 {% extends "form.html" %}
 {% load staticfiles %}
 
+{% block before_the_form %}
+
+<p class="text-right">
+	<a class="btn btn-link" href="{% url 'sites__site_preview' pk=object.pk %}">
+		Voir mon site
+		<i class="fa fa-chevron-circle-right"></i>
+	</a>
+</p>
+
+{% endblock before_the_form %}
+
 {% block after_the_form %}
 
 	<div class="card mt-3">
@@ -25,7 +36,10 @@
 				<hr/>
 			{% endfor %}
 			<div class="text-right">
-				<a class="btn btn-secondary" href=""><i class="fa fa-plus"></i> Ajouter un module</a>
+				<a class="btn btn-secondary" href="{% url 'sites__choose_module' pk=object.pk %}">
+					<i class="fa fa-plus"></i>
+					Ajouter un module
+				</a>
 			</div>
 		</div>
 	</div>
